recursion.cons.lessons.recursion.cons.ButNlast.scala.code
def butNlast(l:List[Int], n:Int): List[Int] = {

	if(n == 0) return l
	
	if(l.length >= n) return l.head
	return l.head::butNlast(l.tail,n)
}